# Apuntes-NLP

./: pyproject.toml
data/: Spanless_DataSet_N.xlsx
notebook/: Caso de estudio Corrector gramatical_Alumnos.ipynb  Reto_01 Prueba de ambiente de trabajo.ipynb  Reto_04 Lematización_Alumnos.ipynb  Reto_06 Morfología de los tokens_Alumnos.ipynb
notebooks/: Reto_02 Tokenizacion.ipynb  Reto_03 Partes del discurso (PoS)_Alumnos.ipynb  Reto_05 Reconocimiento de Entidades_Alumnos.ipynb  Reto_06 Morfología de los tokens_Alumnos.ipynb
notebooks/module_1/: Caso de estudio Corrector gramatical_Alumnos.ipynb  Reto_01 Prueba de ambiente de trabajo.ipynb  Reto_01_Colab.ipynb  Reto_02 Tokenizacion.ipynb  Reto_03 Partes del discurso (PoS)_Alumnos.ipynb  Reto_04 Lematización_Alumnos.ipynb  Reto_05 Reconocimiento de Entidades_Alumnos.ipynb  Reto_06 Morfología de los tokens_Alumnos.ipynb
notebooks/module_2/: Caso_de_Estudio_Spanless_Alumnos_Actualizado (1).ipynb  Caso_de_Estudio_Spanless_Alumnos_Actualizado.ipynb  Reto 01_M2 DataAugmentation_Alumnos.ipynb  Reto 02_M2 Filtrado de StopWords Alumnos.ipynb  Reto 03S2.ipynb  Reto 04y05S2 TF-IDF + Reduccion de caracteristicas Alumnos.ipynb
notebooks/module_3/: Caso de estudio Retos 1 a 5.- Análisis de sentimientos ustilizando DNN, CNN y LSTM _ Alumnos.ipynb
poetry-env/: pyproject.toml
